# mai-cs-c-collection-1

./: CMakeLists.txt  README.md
src/: utils.c
tasks/task_1/: CMakeLists.txt  argc.c  args.h  main.c  math_operations.c  math_operations.h  task1_tests.cpp  task1_tests.sh
tasks/task_2/: CMakeLists.txt  main.c  prime_at_n.c  prime_at_n.h  task2_tests.cpp  task2_tests.sh
tasks/task_3/: CMakeLists.txt  args.c  args.h  main.c  math_operations.c  math_operations.h  task3_tests.cpp
tasks/task_4/: CMakeLists.txt  main.c  mathconst.c  mathconst.h
tasks/task_5/: .gitignore  CMakeLists.txt  args.c  args.h  file_process.c  file_process.h  main.c  string_concatenate.c  string_concatenate.h  task5_tests.cpp  test.txt
tasks/task_6/: CMakeLists.txt  integral.c  integral.h  main.c
tasks/task_7/: CMakeLists.txt  file_process.c  main.c  test.sh  test.txt
tasks/task_8/: CMakeLists.txt  bases.c  bases.h  main.c
